Added in two images and better discriptions

--- a/matavao.html
+++ b/matavao.html
@@ -60,13 +60,27 @@
     <!-- Maybe add a cool way to showcase your code. Like little mini pictures or a slide show!-->
     <section class = "coding-product">
         <h2> Coding Projects</h2>
+        <h3> 🐼 Mochi Bamboo Shipping Program</h3>
         <div class = "coding-items">
             <div class = "coding-container">
-                <img src = "images/ChatGPT Image Oct 30, 2025, 03_37_25 PM.png">
-                <p>A simple C project showcasing my C abilities in a shipping program.</p>
+                <a href = "https://github.com/marinara782/Shipment-Program"><img src = "images/ChatGPT Image Oct 30, 2025, 03_37_25 PM.png" class = "website-image">
+                </a>
+                <p class = "website-details">A simple C project showcasing my C abilities in a shipping program. This program had to implement a system that tracks bamboo inventory, updates stock, 
+                    and analyzes usage patterns. It helped exmphasize pointer manipulation, dynamic arrays, linked lists,
+                    file I/O, and data structure handling. </p>
             </div>
-
+            <h3> 🪄 RPG Battle Simulator</h3>
+            <div class = "coding-container">
+                <a href = "https://github.com/marinara782/RPG-mini-game">
+                    <img src = "images/ChatGPT_Image_Nov_1,_2025,_03_28_51_PM.png" class = "rpg-image">
+                </a>
+                <p class = "website-details">A java console RPG that was built to help practice Object-Oriented Programming more!
+                    This was a fun idea that I wanted to create a cute game that would help me test my abilities to understand
+                    what I have learned! I created it so that players can choose a class either Barbarian, Mage, or Archer (default if none chosen)
+                    and battle my enemy that I had created! Each character type has unique stats and attack behavior so I made some a little goofy
+                    while others may potentially be broken. 
+                </p>
+            </div>
         </div>
     </section>
 </body>
-    
