Made a div class to help with the typewriter animation

--- a/matavao.html
+++ b/matavao.html
@@ -21,8 +21,10 @@
 
 <body>
 
-    <header>
-        <h1 class = "marena">Marena Matavao</h1>
+     <header>
+        <div class = "typewriter">
+           <h1>Marena Matavao</h1> 
+        </div>
         <div class = "horizontal-line"></div>
         <p> 🩷 Hi! My name is Marena!</p>
         <p> 🎒 I currently go to University of Calgary and I am studying Computer Science!</p>
